crates/query-engine/translation/tests/snapshots/tests__it_simple_array_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%5_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%6_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_RELATIONSHIP_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_Album"."Title" AS "title"
                            FROM
                              "public"."Album" AS "%2_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%2_Album"."ArtistId")
                          ) AS "%3_rows"
                      ) AS "%3_rows"
                  ) AS "%1_RELATIONSHIP_Albums"
              ) AS "%1_RELATIONSHIP_Albums" ON ('true')
            LIMIT
              5
          ) AS "%6_rows"
      ) AS "%6_rows"
  ) AS "%5_universe";

{}
