crates/query-engine/translation/tests/snapshots/tests__it_simple_object_relationship.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%5_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%6_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%1_RELATIONSHIP_Artist"."Artist" AS "Artist"
            FROM
              "public"."Album" AS "%0_Album"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_Artist") AS "Artist"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_Artist"."Name" AS "Name"
                            FROM
                              "public"."Artist" AS "%2_Artist"
                            WHERE
                              ("%0_Album"."ArtistId" = "%2_Artist"."ArtistId")
                          ) AS "%3_rows"
                      ) AS "%3_rows"
                  ) AS "%1_RELATIONSHIP_Artist"
              ) AS "%1_RELATIONSHIP_Artist" ON ('true')
            LIMIT
              5
          ) AS "%6_rows"
      ) AS "%6_rows"
  ) AS "%5_universe";

{}
