crates/query-engine/translation/tests/snapshots/tests__nested_aggregates.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

SELECT
  coalesce(json_agg(row_to_json("%5_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%6_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_Artist"."Name" AS "Name",
              "%1_RELATIONSHIP_Albums"."Albums" AS "Albums"
            FROM
              "public"."Artist" AS "%0_Artist"
              LEFT OUTER JOIN LATERAL (
                SELECT
                  row_to_json("%1_RELATIONSHIP_Albums") AS "Albums"
                FROM
                  (
                    SELECT
                      *
                    FROM
                      (
                        SELECT
                          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
                        FROM
                          (
                            SELECT
                              "%2_Album"."Title" AS "Title"
                            FROM
                              "public"."Album" AS "%2_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%2_Album"."ArtistId")
                          ) AS "%3_rows"
                      ) AS "%3_rows"
                      CROSS JOIN (
                        SELECT
                          coalesce(row_to_json("%4_aggregates"), '[]') AS "aggregates"
                        FROM
                          (
                            SELECT
                              COUNT(*) AS "how_many_albums"
                            FROM
                              "public"."Album" AS "%2_Album"
                            WHERE
                              ("%0_Artist"."ArtistId" = "%2_Album"."ArtistId")
                          ) AS "%4_aggregates"
                      ) AS "%4_aggregates"
                  ) AS "%1_RELATIONSHIP_Albums"
              ) AS "%1_RELATIONSHIP_Albums" ON ('true')
            LIMIT
              5 OFFSET 1
          ) AS "%6_rows"
      ) AS "%6_rows"
  ) AS "%5_universe";

{}
