crates/query-engine/translation/tests/snapshots/tests__select_array_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
SET
  TRANSACTION ISOLATION LEVEL READ COMMITTED;

SET
  TRANSACTION READ ONLY;

WITH "%1_NATIVE_QUERY_array_series" AS (
  SELECT
    array_agg(arr.series) AS series
  FROM
    (
      SELECT
        generate_series(1, 5) AS series
    ) AS arr
)
SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_array_series"."series" AS "series"
            FROM
              "%1_NATIVE_QUERY_array_series" AS "%0_array_series"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe";

{}
