crates/query-engine/translation/tests/snapshots/tests__select_composite_column.snap
---
source: crates/query-engine/translation/tests/tests.rs
expression: result
---
WITH "%1_NATIVE_QUERY_make_composite" AS (
  SELECT
    ROW(
      jsonb_populate_record(cast(null as thing1), cast($1 as jsonb)),
      jsonb_populate_record(cast(null as thing2), cast($2 as jsonb))
    ) :: things as result
)
SELECT
  coalesce(json_agg(row_to_json("%2_universe")), '[]') AS "universe"
FROM
  (
    SELECT
      *
    FROM
      (
        SELECT
          coalesce(json_agg(row_to_json("%3_rows")), '[]') AS "rows"
        FROM
          (
            SELECT
              "%0_make_composite"."result" AS "result"
            FROM
              "%1_NATIVE_QUERY_make_composite" AS "%0_make_composite"
          ) AS "%3_rows"
      ) AS "%3_rows"
  ) AS "%2_universe"

[(1, String("{\"field_a\":1,\"field_b\":2}")), (2, String("{\"field_b\":2,\"field_c\":3}"))]
